# Meiosis-Game-Engine

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  LICENSE.md  README.md  Todo_list.md  conanfile.txt
cmake/: Commands.cmake  CompilerWarnings.cmake  Conan.cmake  StandardProjectSettings.cmake  StaticAnalyzers.cmake
include/: BaseDynamics.hpp  Cell.hpp  D2Q9.hpp  GlobalDefs.hpp  Lattice.hpp  Units.hpp
include/Application/: Application.hpp  Mesh.hpp  Scene.hpp
include/Core/Log/: Log.hpp
include/Genesis/: Genesis.hpp
include/Genesis/Application/: Application.hpp
include/Genesis/Core/: Application.hpp  Core.hpp  Entrypoint.hpp  KeyCodes.hpp  Log.hpp  MouseCodes.hpp
include/Genesis/Core/Log/: Log.hpp
include/Genesis/Events/: ApplicationEvent.hpp  Event.hpp  KeyEvent.hpp  MouseEvent.hpp
include/Genesis/UTIL/: Vector.hpp
include/Meiosis/: Meiosis.hpp
include/Meiosis/Core/: Application.hpp  Core.hpp  Entrypoint.hpp  GraphicsContext.hpp  Input.hpp  KeyCodes.hpp  Log.hpp  LogHelper.hpp  MouseCodes.hpp  Timestep.hpp  Window.hpp
include/Meiosis/Events/: ApplicationEvent.hpp  Event.hpp  KeyEvent.hpp  MouseEvent.hpp
include/Meiosis/Layer/: Layer.hpp  LayerStack.hpp
include/Meiosis/OGLAbstraction/: ComputeShader.hpp  IndexBuffer.hpp  Renderer.hpp
include/Meiosis/Platform/OpenGL/: OpenGLBuffer.hpp  OpenGLGraphicsContext.hpp  OpenGLRendererAPI.hpp  OpenGLShader.hpp  OpenGLTexture.hpp
include/Meiosis/Platform/Windows/: WindowsWindow.hpp
include/Meiosis/Renderer/: Camera.hpp  Camera2D.hpp  Material.hpp  Renderer.hpp  Renderer2D.hpp  RendererAPI.hpp  RendererBuffer.hpp  Shader.hpp  Texture.hpp
include/Meiosis/Scene/: Components.hpp  Entity.hpp  Scene.hpp  SceneCamera.hpp
include/Meiosis/UTIL/: FileUtils.hpp
include/Meiosis/imgui/: ImguiLayer.hpp
include/OGLAbstraction/: Renderer.hpp  Shader.hpp  Texture.hpp  VertexArray.hpp  VertexBufferLayout.hpp
include/UTIL/: Random.hpp
include/glad/: glad.h
lib/: CMakeLists.txt
scripts/: conan_install.py
src/: CMakeLists.txt  main.cpp
src/Application/: Application.cpp  CMakeLists.txt
src/Core/Log/: CMakeLists.txt  Log.cpp
src/Genesis/: CMakeLists.txt
src/Genesis/Application/: Application.cpp  CMakeLists.txt
src/Genesis/Core/: Application.cpp  CMakeLists.txt  Log.cpp
src/Genesis/Core/Events/: ApplicationEvent.cpp  CMakeLists.txt  KeyEvent.cpp  MouseEvent.cpp
src/Genesis/Core/Log/: CMakeLists.txt  Log.cpp
src/Genesis/OGLAbstraction/: CMakeLists.txt  Renderer.cpp  Texture.cpp
src/Genesis/Util/: CMakeLists.txt
src/Genesis/resources/shaders/: basic.shader  compute_move.shader
src/Meiosis/: CMakeLists.txt  empty.cpp  main.cpp
src/Meiosis/Application/: Application.cpp  CMakeLists.txt
src/Meiosis/Core/: Application.cpp  CMakeLists.txt  EntryPoint.cpp  GraphicsContext.cpp  Log.cpp  Window.cpp
src/Meiosis/Core/Events/: CMakeLists.txt  KeyEvent.cpp  MouseEvent.cpp
src/Meiosis/Events/: ApplicationEvent.cpp  MouseEvent.cpp
src/Meiosis/Layer/: CMakeLists.txt  Layer.cpp  LayerStack.cpp
src/Meiosis/OGLAbstraction/: CMakeLists.txt  ComputeShader.cpp  IndexBuffer.cpp  Shader.cpp  VertexArray.cpp  VertexBuffer.cpp
src/Meiosis/Platform/: CMakeLists.txt
src/Meiosis/Platform/OpenGL/: CMakeLists.txt  OpenGLBuffer.cpp  OpenGLGraphicsContext.cpp  OpenGLRendererAPI.cpp  OpenGLShader.cpp  OpenGLTexture.cpp
src/Meiosis/Platform/Windows/: CMakeLists.txt  WindowsInput.cpp  WindowsWindow.cpp
src/Meiosis/Renderer/: CMakeLists.txt  Camera2D.cpp  Material.cpp  Renderer.cpp  RendererBuffer.cpp  Shader.cpp  Texture.cpp
src/Meiosis/Scene/: CMakeLists.txt  Components.cpp  Entity.cpp  Scene.cpp  SceneCamera.cpp
src/Meiosis/Util/: CMakeLists.txt  FileUtils.cpp
src/Meiosis/imgui/: CMakeLists.txt  ImguiLayer.cpp
src/Meiosis/resources/shaders/: texture.shader
src/OGLAbstraction/: CMakeLists.txt  ComputeShader.cpp  IndexBuffer.cpp  Renderer.cpp  Shader.cpp  Texture.cpp  VertexArray.cpp  VertexBuffer.cpp
src/Sandbox/: CMakeLists.txt  ExampleTestLayer.cpp  ExampleTestLayer.hpp  Sandbox.cpp
src/Sandbox/resources/shaders/: basic_obj_shader.glsl  simple_color.glsl  texture.glsl
src/Tests/: CMakeLists.txt
src/Tests/Platform/OpenGL/: CMakeLists.txt  ShaderTest.cpp
src/Tests/Util/: CMakeLists.txt  FileUtilTest.cpp
src/Util/: CMakeLists.txt  Random.cpp
src/resources/shaders/: ortho.shader
